# inplace-vector

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  inplace_vector.hpp
src/detail/: attic.hpp  inplace_vector_forward.hpp  iterator.hpp  storage.hpp
src/test/: CMakeLists.txt  inplace_vector_test.cpp
